<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/nom"
              android:hint="@string/nom_complet"
              android:inputType="textPersonName"
              android:textSize="30sp"
              android:textColor="@color/black"
              android:gravity="center"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:autofillHints="" android:textColorHint="#A1887F"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/email"
              android:hint="@string/adresse_email"
              android:inputType="textEmailAddress"
              android:textSize="25sp"
              android:textColor="@color/black"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/nom"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="8dp" android:autofillHints="" android:textColorHint="#A1887F"/>


    <RadioGroup android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genre"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp">

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/homme"
                     android:text="@string/homme"
                     android:textSize="20sp"
                     android:textColor="@color/black"/>

        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/femme"
                     android:text="@string/femme"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:checked="false"/>
    </RadioGroup>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/options"
              android:hint="@string/options"
              android:textSize="30sp"
              android:textColor="@color/black"
              app:layout_constraintTop_toBottomOf="@id/genre"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="8dp" android:textColorHint="#A1887F"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/option1"
              android:text="@string/offre_commerciale"
              android:textSize="30sp"
              android:textColor="@color/black"
              app:layout_constraintTop_toBottomOf="@id/options"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="4dp"
              app:layout_constraintHorizontal_bias="0.220"/>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/option2"
              android:text="@string/accepter_les_conditions"
              android:textSize="30sp"
              android:textColor="@color/black"
              app:layout_constraintTop_toBottomOf="@id/option1"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="8dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valider"
            android:text="@string/valider"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/option2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>